// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TopLabels /> doesn't render labels with 100% 1`] = `
"
<div class=\\"components-toplabels m-1 bg-secondary rounded d-flex flex-row\\">
  <div class=\\"flex-grow-0 flex-shrink-0 pl-1 d-none d-sm-block\\">
    <div class
         style=\\"display: inline-block; max-width: 100%;\\"
         data-tooltipped
         aria-describedby=\\"tippy-tooltip-3\\"
         data-original-title=\\"Top labels\\"
    >
      <span>
        <svg aria-hidden=\\"true\\"
             focusable=\\"false\\"
             data-prefix=\\"far\\"
             data-icon=\\"chart-bar\\"
             class=\\"svg-inline--fa fa-chart-bar fa-w-16 text-white\\"
             role=\\"img\\"
             xmlns=\\"http://www.w3.org/2000/svg\\"
             viewbox=\\"0 0 512 512\\"
        >
          <path fill=\\"currentColor\\"
                d=\\"M396.8 352h22.4c6.4 0 12.8-6.4 12.8-12.8V108.8c0-6.4-6.4-12.8-12.8-12.8h-22.4c-6.4 0-12.8 6.4-12.8 12.8v230.4c0 6.4 6.4 12.8 12.8 12.8zm-192 0h22.4c6.4 0 12.8-6.4 12.8-12.8V140.8c0-6.4-6.4-12.8-12.8-12.8h-22.4c-6.4 0-12.8 6.4-12.8 12.8v198.4c0 6.4 6.4 12.8 12.8 12.8zm96 0h22.4c6.4 0 12.8-6.4 12.8-12.8V204.8c0-6.4-6.4-12.8-12.8-12.8h-22.4c-6.4 0-12.8 6.4-12.8 12.8v134.4c0 6.4 6.4 12.8 12.8 12.8zM496 400H48V80c0-8.84-7.16-16-16-16H16C7.16 64 0 71.16 0 80v336c0 17.67 14.33 32 32 32h464c8.84 0 16-7.16 16-16v-16c0-8.84-7.16-16-16-16zm-387.2-48h22.4c6.4 0 12.8-6.4 12.8-12.8v-70.4c0-6.4-6.4-12.8-12.8-12.8h-22.4c-6.4 0-12.8 6.4-12.8 12.8v70.4c0 6.4 6.4 12.8 12.8 12.8z\\"
          >
          </path>
        </svg>
      </span>
    </div>
  </div>
  <div class=\\"pl-1 flex-grow-1 flex-shrink-1 components-toplabels-labels\\">
    <div class
         style=\\"display: inline-block; max-width: 100%;\\"
         data-tooltipped
         aria-describedby=\\"tippy-tooltip-4\\"
         data-original-title=\\"Click to only show alerts with this label or Alt+Click to hide them\\"
    >
      <span class=\\"components-label badge badge-warning components-label-dark components-label-with-hover pl-0 text-left\\">
        <span class=\\"mr-1 px-1 bg-light text-primary components-toplabel-percent\\">
          80%
        </span>
        <span class=\\"components-label-name\\">
          foo80:
        </span>
        <span class=\\"components-label-value\\">
          80
        </span>
      </span>
    </div>
    <div class
         style=\\"display: inline-block; max-width: 100%;\\"
         data-tooltipped
         aria-describedby=\\"tippy-tooltip-5\\"
         data-original-title=\\"Click to only show alerts with this label or Alt+Click to hide them\\"
    >
      <span class=\\"components-label badge badge-warning components-label-dark components-label-with-hover pl-0 text-left\\">
        <span class=\\"mr-1 px-1 bg-light text-primary components-toplabel-percent\\">
          74%
        </span>
        <span class=\\"components-label-name\\">
          foo74:
        </span>
        <span class=\\"components-label-value\\">
          74
        </span>
      </span>
    </div>
  </div>
  <div class=\\"flex-grow-0 flex-shrink-0 px-1\\">
    <span>
      <svg aria-hidden=\\"true\\"
           focusable=\\"false\\"
           data-prefix=\\"fas\\"
           data-icon=\\"times\\"
           class=\\"svg-inline--fa fa-times fa-w-11 cursor-pointer close\\"
           role=\\"img\\"
           xmlns=\\"http://www.w3.org/2000/svg\\"
           viewbox=\\"0 0 352 512\\"
      >
        <path fill=\\"currentColor\\"
              d=\\"M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z\\"
        >
        </path>
      </svg>
    </span>
  </div>
</div>
"
`;

exports[`<TopLabels /> matches snapshot 1`] = `
"
<div class=\\"components-toplabels m-1 bg-secondary rounded d-flex flex-row\\">
  <div class=\\"flex-grow-0 flex-shrink-0 pl-1 d-none d-sm-block\\">
    <div class
         style=\\"display: inline-block; max-width: 100%;\\"
         data-tooltipped
         aria-describedby=\\"tippy-tooltip-1\\"
         data-original-title=\\"Top labels\\"
    >
      <span>
        <svg aria-hidden=\\"true\\"
             focusable=\\"false\\"
             data-prefix=\\"far\\"
             data-icon=\\"chart-bar\\"
             class=\\"svg-inline--fa fa-chart-bar fa-w-16 text-white\\"
             role=\\"img\\"
             xmlns=\\"http://www.w3.org/2000/svg\\"
             viewbox=\\"0 0 512 512\\"
        >
          <path fill=\\"currentColor\\"
                d=\\"M396.8 352h22.4c6.4 0 12.8-6.4 12.8-12.8V108.8c0-6.4-6.4-12.8-12.8-12.8h-22.4c-6.4 0-12.8 6.4-12.8 12.8v230.4c0 6.4 6.4 12.8 12.8 12.8zm-192 0h22.4c6.4 0 12.8-6.4 12.8-12.8V140.8c0-6.4-6.4-12.8-12.8-12.8h-22.4c-6.4 0-12.8 6.4-12.8 12.8v198.4c0 6.4 6.4 12.8 12.8 12.8zm96 0h22.4c6.4 0 12.8-6.4 12.8-12.8V204.8c0-6.4-6.4-12.8-12.8-12.8h-22.4c-6.4 0-12.8 6.4-12.8 12.8v134.4c0 6.4 6.4 12.8 12.8 12.8zM496 400H48V80c0-8.84-7.16-16-16-16H16C7.16 64 0 71.16 0 80v336c0 17.67 14.33 32 32 32h464c8.84 0 16-7.16 16-16v-16c0-8.84-7.16-16-16-16zm-387.2-48h22.4c6.4 0 12.8-6.4 12.8-12.8v-70.4c0-6.4-6.4-12.8-12.8-12.8h-22.4c-6.4 0-12.8 6.4-12.8 12.8v70.4c0 6.4 6.4 12.8 12.8 12.8z\\"
          >
          </path>
        </svg>
      </span>
    </div>
  </div>
  <div class=\\"pl-1 flex-grow-1 flex-shrink-1 components-toplabels-labels\\">
    <div class
         style=\\"display: inline-block; max-width: 100%;\\"
         data-tooltipped
         aria-describedby=\\"tippy-tooltip-2\\"
         data-original-title=\\"Click to only show alerts with this label or Alt+Click to hide them\\"
    >
      <span class=\\"components-label badge badge-warning components-label-dark components-label-with-hover pl-0 text-left\\">
        <span class=\\"mr-1 px-1 bg-light text-primary components-toplabel-percent\\">
          50%
        </span>
        <span class=\\"components-label-name\\">
          foo:
        </span>
        <span class=\\"components-label-value\\">
          bar
        </span>
      </span>
    </div>
  </div>
  <div class=\\"flex-grow-0 flex-shrink-0 px-1\\">
    <span>
      <svg aria-hidden=\\"true\\"
           focusable=\\"false\\"
           data-prefix=\\"fas\\"
           data-icon=\\"times\\"
           class=\\"svg-inline--fa fa-times fa-w-11 cursor-pointer close\\"
           role=\\"img\\"
           xmlns=\\"http://www.w3.org/2000/svg\\"
           viewbox=\\"0 0 352 512\\"
      >
        <path fill=\\"currentColor\\"
              d=\\"M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z\\"
        >
        </path>
      </svg>
    </span>
  </div>
</div>
"
`;

exports[`<TopLabels /> renders only labels with >=75% when settingsStore.topLabelsConfig.config.minPercent is 75 1`] = `
"
<div class=\\"components-toplabels m-1 bg-secondary rounded d-flex flex-row\\">
  <div class=\\"flex-grow-0 flex-shrink-0 pl-1 d-none d-sm-block\\">
    <div class
         style=\\"display: inline-block; max-width: 100%;\\"
         data-tooltipped
         aria-describedby=\\"tippy-tooltip-6\\"
         data-original-title=\\"Top labels\\"
    >
      <span>
        <svg aria-hidden=\\"true\\"
             focusable=\\"false\\"
             data-prefix=\\"far\\"
             data-icon=\\"chart-bar\\"
             class=\\"svg-inline--fa fa-chart-bar fa-w-16 text-white\\"
             role=\\"img\\"
             xmlns=\\"http://www.w3.org/2000/svg\\"
             viewbox=\\"0 0 512 512\\"
        >
          <path fill=\\"currentColor\\"
                d=\\"M396.8 352h22.4c6.4 0 12.8-6.4 12.8-12.8V108.8c0-6.4-6.4-12.8-12.8-12.8h-22.4c-6.4 0-12.8 6.4-12.8 12.8v230.4c0 6.4 6.4 12.8 12.8 12.8zm-192 0h22.4c6.4 0 12.8-6.4 12.8-12.8V140.8c0-6.4-6.4-12.8-12.8-12.8h-22.4c-6.4 0-12.8 6.4-12.8 12.8v198.4c0 6.4 6.4 12.8 12.8 12.8zm96 0h22.4c6.4 0 12.8-6.4 12.8-12.8V204.8c0-6.4-6.4-12.8-12.8-12.8h-22.4c-6.4 0-12.8 6.4-12.8 12.8v134.4c0 6.4 6.4 12.8 12.8 12.8zM496 400H48V80c0-8.84-7.16-16-16-16H16C7.16 64 0 71.16 0 80v336c0 17.67 14.33 32 32 32h464c8.84 0 16-7.16 16-16v-16c0-8.84-7.16-16-16-16zm-387.2-48h22.4c6.4 0 12.8-6.4 12.8-12.8v-70.4c0-6.4-6.4-12.8-12.8-12.8h-22.4c-6.4 0-12.8 6.4-12.8 12.8v70.4c0 6.4 6.4 12.8 12.8 12.8z\\"
          >
          </path>
        </svg>
      </span>
    </div>
  </div>
  <div class=\\"pl-1 flex-grow-1 flex-shrink-1 components-toplabels-labels\\">
    <div class
         style=\\"display: inline-block; max-width: 100%;\\"
         data-tooltipped
         aria-describedby=\\"tippy-tooltip-7\\"
         data-original-title=\\"Click to only show alerts with this label or Alt+Click to hide them\\"
    >
      <span class=\\"components-label badge badge-warning components-label-dark components-label-with-hover pl-0 text-left\\">
        <span class=\\"mr-1 px-1 bg-light text-primary components-toplabel-percent\\">
          80%
        </span>
        <span class=\\"components-label-name\\">
          foo80:
        </span>
        <span class=\\"components-label-value\\">
          80
        </span>
      </span>
    </div>
    <div class
         style=\\"display: inline-block; max-width: 100%;\\"
         data-tooltipped
         aria-describedby=\\"tippy-tooltip-8\\"
         data-original-title=\\"Click to only show alerts with this label or Alt+Click to hide them\\"
    >
      <span class=\\"components-label badge badge-warning components-label-dark components-label-with-hover pl-0 text-left\\">
        <span class=\\"mr-1 px-1 bg-light text-primary components-toplabel-percent\\">
          75%
        </span>
        <span class=\\"components-label-name\\">
          foo75:
        </span>
        <span class=\\"components-label-value\\">
          75
        </span>
      </span>
    </div>
    <div class
         style=\\"display: inline-block; max-width: 100%;\\"
         data-tooltipped
         aria-describedby=\\"tippy-tooltip-9\\"
         data-original-title=\\"Click to only show alerts with this label or Alt+Click to hide them\\"
    >
      <span class=\\"components-label badge badge-warning components-label-dark components-label-with-hover pl-0 text-left\\">
        <span class=\\"mr-1 px-1 bg-light text-primary components-toplabel-percent\\">
          99%
        </span>
        <span class=\\"components-label-name\\">
          foo99:
        </span>
        <span class=\\"components-label-value\\">
          99
        </span>
      </span>
    </div>
  </div>
  <div class=\\"flex-grow-0 flex-shrink-0 px-1\\">
    <span>
      <svg aria-hidden=\\"true\\"
           focusable=\\"false\\"
           data-prefix=\\"fas\\"
           data-icon=\\"times\\"
           class=\\"svg-inline--fa fa-times fa-w-11 cursor-pointer close\\"
           role=\\"img\\"
           xmlns=\\"http://www.w3.org/2000/svg\\"
           viewbox=\\"0 0 352 512\\"
      >
        <path fill=\\"currentColor\\"
              d=\\"M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z\\"
        >
        </path>
      </svg>
    </span>
  </div>
</div>
"
`;
